--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-dist: bionic
-os:
-- linux
-- osx
 language: python
-python:
-- "3.7"
+
+matrix:
+  include:
+    - dist: bionic
+      python: 3.7
+    - os: osx
+      osx_image: xcode10.2
+      language: shell
 
 script: python -m unittest test.py
