--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ matrix:
       osx_image: xcode10.2
       language: shell
 
-script: python -m unittest test.py || python3 -m unittest test.py
+script: python3 -m unittest test.py || python -m unittest test.py
